<resources>
    <string name="app_name">Quiz-App</string>
    <string name="quiz_app">Quiz App</string>
    <string name="button">Button</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="questions">QUESTIONS</string>
    <string name="_00_15">00:15</string>
    <string name="question">QUESTION</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>
</resources>