<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".PythonQuestions">

    <android.widget.Button
        android:id="@+id/option3"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_blue_light"
        android:enabled="true"
        android:onClick="option3Clicked"
        android:text="@string/option3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        tools:ignore="DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck,TextContrastCheck">

    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/option1"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_blue_light"
        android:enabled="true"
        android:onClick="option1Clicked"
        android:text="@string/option1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck">

    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/option2"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_blue_light"
        android:enabled="true"
        android:onClick="option2Clicked"
        android:text="@string/option2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573"
        tools:ignore="TextContrastCheck">

    </android.widget.Button>

    <android.widget.Button
        android:id="@+id/option4"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_blue_light"
        android:enabled="true"
        android:onClick="option4Clicked"
        android:text="@string/option4"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788"
        tools:ignore="DuplicateClickableBoundsCheck,TextContrastCheck">

    </android.widget.Button>

    <TextView
        android:id="@+id/question"
        android:layout_width="369dp"
        android:layout_height="96dp"
        android:background="#FF9800"
        android:backgroundTint="#C57B0F"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308">

    </TextView>

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/_00_15"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18">

    </TextView>

    <TextView
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/question"
        android:textColor="#FF9800"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>